src/main/java/com/example/error/CustomerNotFoundException.java
package com.example.error;

public class CustomerNotFoundException extends RuntimeException {
	public CustomerNotFoundException(String message) {
		super(message);
	}
}